# haskell-reddit-jobs-counter

./: README.md  haskell-reddit-jobs-counter.cabal  lsp-shell.nix  shell.nix  stack.yaml
app/: Main.hs
