cabal-version:      3.0
name:               haskell-reddit-jobs-counter
version:            0.0.1.0
synopsis:           Counting jobs on the Haskell Reddit over time
description:        Counting jobs on the Haskell Reddit over time
license:            MIT
author:             Niklas Hambüchen
copyright:          (c) Niklas Hambüchen, 2023
category:           Other
tested-with:        GHC ==9.8.2
extra-doc-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/nh2/haskell-reddit-jobs-counter.git

common common-options
  ghc-options:
    -Wall

executable main
  import: common-options
  hs-source-dirs: app
  main-is: Main.hs

  build-depends:
      base                  >=4.15 && <5
    -- heddit 0.2 only works with the following patches applied:
    -- * https://gitlab.com/ngua/heddit/-/merge_requests/1
    -- * https://gitlab.com/ngua/heddit/-/merge_requests/2
    , heddit              >= 0.2
    , aeson
    , directory
    , filepath
    , text
    , time

  default-language: Haskell2010
